Move dark mode and refresh to helper modal. Fixes #109.

--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,11 @@ body {
 
 a {
   cursor: pointer;
-  color: inherit;
-  text-decoration: none;
+  /* color: inherit; */
+  /* text-decoration: none; */
+  text-decoration-line: underline;
   outline: none;
+  color: #1b6f9a; 
 }
 
 /* Headings */
@@ -40,6 +42,10 @@ h2 {
   font-weight: 300;
   border-bottom: solid 1px #000;
   margin-bottom: 25px;
+}
+
+.dark h2 {
+  border-bottom: solid 1px #fff;
 }
 
 ul {
@@ -830,10 +836,6 @@ h1 .num-contexts {
   opacity: 0.8;
 }
 
-.footer a {
-  color: #1b6f9a;
-}
-
 .dark .footer a {
   color: skyblue;
 }
@@ -860,7 +862,6 @@ h1 .num-contexts {
 .dark .dim { color: rgba(255,255,255,0.5); }
 
 .helper {
-  font-size: 18px;
   background-color: white;
   box-shadow: 2px 5px 5px rgba(0,0,0,0.5);
   border: solid 1px rgba(0,0,0,0.2);
@@ -905,7 +906,6 @@ h1 .num-contexts {
 
 .popup {
   font-family: 'Helvetica Neue';
-  font-size: 26px;
   box-shadow: none;
   border: none;
   display: block;
@@ -932,6 +932,15 @@ h1 .num-contexts {
   text-align: center;
 }
 
+.popup .helper-subtitle {
+  font-size: 22px;
+}
+
+.popup .helper-subtitle-compact {
+  margin-bottom: 15px;
+}
+
+
 .popup .helper-text {
   margin-bottom: 50px;
 }
@@ -955,6 +964,7 @@ h1 .num-contexts {
 
 .helper-welcome {
   height: 100%;
+  font-size: 26px;
 }
 
 .helper-welcome .helper-title {
